# price_estimator

./: .env  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.yaml  crontab  definitions.json  old_compose.yaml  pyproject.toml  requirements.txt  requirements.yaml
.github/workflows/: python.yml
configs/: config.yaml
configs/predict/: config.yaml
configs/scrape/: available_codes.json  config.yaml
configs/scrape/preset/: IATA_set1.yaml
configs/scraper/: config.yaml
configs/scraper/preset/: IATA_set1.yaml
configs/train/: config.yaml
data/scraped/: 2024-04-12_22-33-13.csv  2024-04-14_18-52-24.csv  2024-06-03_10-43-15.csv  train_data.csv
docker/ml_data/: Dockerfile
docker/predict/: Dockerfile  init.sh
docker/rabbitmq/: Dockerfile  definitions.json
docker/train/: Dockerfile
old_ml_data/data/scraped/: 2024-05-02_20-58-58.csv
old_ml_data/src/: minio_client.py  progress.py
old_price_est/docker/predict/: Dockerfile
old_price_est/train_configs/: config.yaml
requirements/ml_data/: requirements.txt
requirements/price_prediction/: requirements.txt
scraper_configs/: config.yaml
scraper_configs/preset/: IATA_set1.yaml  available_codes.txt
src/: file_uploader.py  inference.py  minio_client.py  predict.py  scrape.py  scraper.py  train.py  trainer.py  utils.py  utils_scrape.py  utils_scraper.py
tests/: test_file.csv  test_notification.py  test_upload.py
train_configs/: config.yaml
