[tool.poetry]
name = "price-estimator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
lightgbm = "^4.3.0"
hydra-core = "1.3"
rootutils = "^1.0.7"
minio = "^7.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
